# Foldy

./: .gitignore  README.md  meson.build  meson_options.txt  setup-space.sh  update_all_potfiles.sh
.github/workflows/: CI-PR.yml  CI-master.yml  CI.yml
app/: add-apps-page.vala  app-info-dialog.vala  app-row-add.vala  app-row.vala  application.vala  base-page.vala  categories-list.vala  categories-model.vala  category-row.vala  folder-dialog.vala  folder-page.vala  folder-row.vala  folders-list-page.vala  meson.build  search-row.vala  utils.vala  window.vala
app/data/: meson.build  org.altlinux.Foldy.desktop.in  org.altlinux.Foldy.gresource.xml  org.altlinux.Foldy.gschema.xml  org.altlinux.Foldy.metainfo.xml.in
app/data/icons/: meson.build
app/data/ui/: add-apps-page.blp  app-info-dialog.blp  app-row.blp  base-page.blp  category-row.blp  folder-dialog.blp  folder-page.blp  folders-list-page.blp  search-row.blp
app/po/: LINGUAS  POTFILES.in  foldy.pot  ru.po  uk.po  update_potfiles.sh
build-aux/flatpak/: <<APP-ID>>-Devel.json  io.github.Rirusha.Foldy-Devel.json  io.github.Rirusha.Foldy.json  org.altlinux.Foldy.json  org.altlinux.Foldy.yml  space.rirusha.Foldy-PreRelease.yml  space.rirusha.Foldy.yml
build-aux/sisyphus/: .rpmmacros  foldy.spec
build-aux/sithyfus/: foldy.spec
data/: <<APP-ID>>-Devel.desktop.in  <<APP-ID>>.appdata.xml.in  <<APP-ID>>.desktop.in  <<APP-ID>>.gresource.xml  <<APP-ID>>.gschema.xml  io.github.Rirusha.Foldy-Devel.desktop.in  io.github.Rirusha.Foldy.appdata.xml.in  io.github.Rirusha.Foldy.desktop.in  io.github.Rirusha.Foldy.gresource.xml  io.github.Rirusha.Foldy.gschema.xml  meson.build  org.altlinux.Foldy.desktop.in  org.altlinux.Foldy.gresource.xml  org.altlinux.Foldy.gschema.xml  org.altlinux.Foldy.metainfo.xml.in  org.altlinux.Foldy.service.in  space.rirusha.Foldy.desktop.in  space.rirusha.Foldy.gresource.xml  space.rirusha.Foldy.gschema.xml  space.rirusha.Foldy.metainfo.xml.in  style.css
data/icons/: meson.build
data/ui/: add-apps-page.blp  app-info-dialog.blp  app-row.blp  base-page.blp  categories-list.blp  category-row.blp  edit-folder-dialog.blp  folder-dialog.blp  folder-page.blp  folders-list-page.blp  help-overlay.blp  main-menu-button.blp  main_window.blp  search-row.blp  window.blp
hooks/: pre-commit
lib/: folder.vala  folders.vala  meson.build  utils.vala
lib/doc/: meson.build
po/: POTFILES.in  foldy.pot  ru.po  update_pot.sh
service/: folder-data.vala  folders-watcher.vala  main.vala  meson.build  utils.vala
service/data/: meson.build  org.altlinux.FoldyService.desktop.in.in  org.altlinux.FoldyService.service.in
service/po/: POTFILES.in  meson.build  org.altlinux.FoldyService.pot  ru.po  uk.po  update_potfiles.sh
src/: add-apps-page.vala  app-info-dialog.vala  app-row-remove.vala  app-row.vala  application.vala  base-page.vala  categories-list.vala  category-row.vala  config.vapi  desktop-file-reader.vala  edit-folder-dialog.vala  folder-dialog.vala  folder-page.vala  folder-row.vala  folders-list-page.vala  main-menu-button.vala  main.vala  main_window.vala  meson.build  search-row.vala  utils.vala  window.vala
src/service/: folder-data.vala  folders-watcher.vala
subprojects/: libfoldy-1.wrap  libicons-cache-1.wrap
tests/: example-test.vala  example_test.vala  meson.build
